# radium

./: .gdbinit  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  bootinfo.toml  build.rs  kdriver_linker.ld  linker.ld  test_bootinfo.toml  test_run.sh
.cargo/: config.toml
build-tool/: Cargo.toml
build-tool-proc/: Cargo.toml
build-tool-proc/src/: lib.rs
build-tool/src/: build.rs  config.rs  lib.rs  main.rs  prompt.rs  repl.rs  widget.rs
build-tool/src/widget/: config_area.rs  prompt.rs
build-tool/src/widget/prompt/: interpolate.rs
iso/boot/grub/: grub.cfg
post-processor/baker/: Cargo.toml
post-processor/baker/src/: main.rs
post-processor/packer/: Cargo.toml
post-processor/packer/src/: main.rs
src/: Cargo.toml  allocator.rs  drive.rs  driver.rs  gdt.rs  interrupt.rs  lib.rs  main.rs  memory.rs  port.rs  print.rs  utils.rs  vga.rs
src/allocator/: linked_list.rs
src/baker/: Cargo.toml
src/baker/src/: main.rs
src/bakery/: .cargo_check_cmd  Cargo.toml
src/bakery/src/: lib.rs
src/boot/: boot.asm  header.asm  long_mode.asm
src/boot_cfg_parser/: Cargo.toml
src/boot_cfg_parser/src/: lib.rs
src/boot_cfg_parser/src/toml/: lexer.rs  parser.rs
src/bootbridge/: Cargo.toml
src/bootbridge/src/: lib.rs
src/bootloader/: Cargo.toml  build.rs  rust-toolchain.toml
src/bootloader/.cargo/: config.toml
src/bootloader/src/: boot_services.rs  config.rs  context.rs  elf_loader.rs  graphics.rs  kernel_loader.rs  kernel_mapper.rs  main.rs  toml.rs
src/c_enum/src/: lib.rs
src/common/: Cargo.toml
src/common/src/: boot.rs  hash_map.rs  lib.rs  toml.rs
src/driver/: display.rs  keyboard.rs  mod.rs  pci.rs  storage.rs  timer.rs
src/driver/storage/: ahci_driver.rs  ata_driver.rs
src/drivers/: x86_64_kdriver.json
src/drivers/test_driver/: Cargo.toml  build.rs
src/filesystem/: partition.rs
src/filesystem/partition/: gpt_partition.rs  msdos_partition.rs
src/gui/: mod.rs
src/kernel/: .cargo_check_cmd  Cargo.toml  build.rs  linker.ld  x86_64.json
src/kernel/.cargo/: config.toml
src/kernel/asm/: boot.asm  trampoline.asm
src/kernel/src/: allocator.rs  buffer.rs  driver.rs  gdt.rs  graphics.rs  initialization_context.rs  interrupt.rs  lib.rs  logger.rs  main.rs  memory.rs  port.rs  prelude.rs  print.rs  scheduler.rs  serial.rs  smp.rs  sync.rs  syscall.rs  task.rs  userland.rs  utils.rs
src/kernel/src/allocator/: linked_list.rs
src/kernel/src/boot/: boot.asm  trampoline.asm
src/kernel/src/buffer/: read.rs  write.rs
src/kernel/src/driver/: acpi.rs  display.rs  pci.rs  pit.rs  storage.rs  timer.rs  uefi_runtime.rs
src/kernel/src/driver/acpi/: aml.rs  dsdt.rs  fadt.rs  madt.rs  rsdt.rs  sdp.rs
src/kernel/src/driver/acpi/aml/: namespace.rs  parser.rs
src/kernel/src/driver/acpi/aml/parser/: name_string.rs  named_objects.rs  opcode.rs  package_length.rs  term_object.rs
src/kernel/src/driver/acpi/aml/parser/term_object/: named_obj.rs  namespace_modifier.rs
src/kernel/src/driver/display/: vga.rs
src/kernel/src/driver/storage/: ahci_driver.rs  ata_driver.rs
src/kernel/src/filesystem/: partition.rs
src/kernel/src/filesystem/partition/: gpt_partition.rs  msdos_partition.rs
src/kernel/src/graphics/: color.rs  frame_renderer.rs  frame_tracker.rs
src/kernel/src/interrupt/: apic.rs  idt.rs  io_apic.rs
src/kernel/src/interrupt/apic/: ipi.rs  registers.rs
src/kernel/src/logger/: static_log.rs
src/kernel/src/memory/: allocator.rs  area_frame_allocator.rs  paging.rs  stack_allocator.rs
src/kernel/src/memory/allocator/: area_allocator.rs  area_frame_allocator.rs  buddy_allocator.rs  linear_allocator.rs  linked_list.rs
src/kernel/src/memory/paging/: entry.rs  mapper.rs  table.rs  temporary_page.rs
src/kernel/src/paging/: table.rs  temporary_page.rs
src/kernel/src/print/: ttf_parser.rs  ttf_renderer.rs
src/kernel/src/scheduler/: thread.rs
src/kernel/src/sync/: circular_ring_buffer.rs  mutex.rs  spin_mpsc.rs
src/kernel/src/task/: executor.rs
src/kernel/src/userland/: control.rs  ipp.rs  pipeline.rs  scheduler.rs  syscall.rs
src/kernel/src/userland/control/: dispatch.rs  process.rs  scheduler.rs  thread.rs
src/kernel/src/userland/pipeline/: dispatch.rs  ipp.rs  process.rs  scheduler.rs  thread.rs
src/kernel/src/userland/pipeline/thread/: id.rs
src/kernel/src/utils/: buffer_reader.rs  circular_ring_buffer.rs  math.rs  mutex.rs  port.rs  spin_mpsc.rs
src/kernel/tests/: acpi.rs  ahci.rs  ahci_test.rs  basic_boot.rs  buddy_allocator.rs  circular_ring_buffer.rs  heap_allocation.rs  mutex_stress.rs  serial_test.rs  trivial_assertion.rs  uefi.rs
src/kernel_proc/: Cargo.toml
src/kernel_proc/src/: lib.rs
src/lib/bakery/: Cargo.toml
src/lib/bootbridge/: Cargo.toml
src/lib/config/: build.rs
src/lib/packery/: Cargo.toml
src/lib/pager/: Cargo.toml
src/lib/santa/: Cargo.toml
src/lib/sentinel/: Cargo.toml
src/lib/sink/: Cargo.toml
src/memory/: area_frame_allocator.rs  mod.rs  paging.rs
src/memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
src/os-runner/: Cargo.toml
src/os-runner/src/: main.rs
src/packer/: Cargo.toml
src/packer/src/: main.rs
src/packery/: Cargo.toml
src/packery/src/: lib.rs
src/pager/: Cargo.toml
src/pager/src/: address.rs  allocator.rs  gdt.rs  lib.rs  paging.rs  registers.rs
src/proc/: Cargo.toml
src/proc/build-tool/: Cargo.toml
src/proc/src/: lib.rs
src/renderer/: mod.rs
src/rstd/: .cargo_check_cmd  Cargo.toml
src/rstd/src/: drivcall.rs  lib.rs
src/santa/: Cargo.toml
src/santa/src/: lib.rs  reader.rs
src/sentinel/: Cargo.toml
src/sentinel/src/: lib.rs
src/task/: executor.rs  interrupt_wakeups.rs
src/test_driver/: Cargo.toml
src/test_driver/.cargo/: config.toml
src/userland/: x86_64_userland.json
src/userland/init/: build.rs
src/utils/: converter.rs  mod.rs  oserror.rs  port.rs
tests/: basic_boot.rs  heap_allocation.rs  serial_test.rs  trivial_assertion.rs
userland/: linker.ld
userland/init/: build.rs
userland/init/.cargo/: config.toml
userland/init/src/: main.rs
(+42 files in other folders)
