[workspace]
members = [
    "src/boot_cfg_parser", 
    "src/kernel", 
    "src/bootloader", 
    "src/bootbridge", 
    "src/santa", 
    "src/c_enum", 
    "src/bakery", 
    "src/kernel_proc", 
    "src/pager", 
    "src/sentinel", 
    "src/packery", 

    "userland/init",

    "post-processor/packer", 
    "post-processor/baker", 

    "build-tool", 
]
resolver = "2"

[profile.dev]
panic = "unwind"
opt-level = 0

[profile.release]
panic = "unwind"
opt-level = 3

[workspace.dependencies]
