[workspace]
members = [
    "src/kernel", 
    "src/bootloader", 
    "src/bootbridge", 
    "src/santa", 
    "src/c_enum", 
    "src/bakery", 
    "src/kernel_proc", 
    "src/pager", 
    "src/sentinel", 
    "src/packery", 

    "userland/init",

    "post-processor/packer", 
    "post-processor/baker", 

    "build-tool", "build-tool-proc", 
]
resolver = "2"
default-members = ["build-tool"]

[profile.dev]
panic = "unwind"
opt-level = 0

[profile.release]
panic = "unwind"
opt-level = 3

[workspace.dependencies]
