[package]
name = "build-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
oklab = "1.1.2"
portable-pty = "0.9.0"
ratatui = "0.30.0"
thiserror = "2.0.17"
toml = "0.9.10"
build-tool-proc = { path = "../build-tool-proc" }
smart-default = "0.7.1"
serde = { version = "1.0.228", features = ["derive"]}

[dependencies.arboard]
version = "3.6.1"
features = ["wayland-data-control"]
default-features = false
