[package]
name = "build-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
oklab = "1.1.2"
portable-pty = "0.9.0"
ratatui = "0.30.0"
thiserror = "2.0.17"
toml = "0.9.10"
build-tool-proc = { path = "../build-tool-proc" }
smart-default = "0.7.1"
serde = { version = "1.0.228", features = ["derive"]}
bit_field = "0.10.2"
paste = "1.0.15"
chrono = "0.4.42"
bitflags = "2.4.1"
object = "0.32"
addr2line = "0.21"
gimli = "0.27" 
rustc-demangle = "0.1"
is_executable = "1.0.5"
bakery = { path = "../src/bakery" }
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"

[dependencies.arboard]
version = "3.6.1"
features = ["wayland-data-control"]
default-features = false

[dependencies.packery]
path = "../src/packery"
default-features = false
features = ["std"]
