[package]
name = "radium-bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
uefi = "0.27.0"
uefi-raw = "0.5.1"
uefi-services = "0.24.0"
uart_16550 = "0.2.0"
x86_64 = "0.15.1"

[dependencies.boot_cfg_parser]
path = "../boot_cfg_parser"

[dependencies.bootbridge]
path = "../bootbridge"

[dependencies.bakery]
path = "../bakery"
default-features = false
features = ["alloc"]

[dependencies.santa]
path = "../santa"

