[package]
name = "radium-bootloader"
version = "0.1.0"
edition = "2024"

[dependencies]
uefi = "0.27.0"
uefi-raw = "0.5.1"
uefi-services = "0.24.0"
uart_16550 = "0.2.0"
pager = { workspace = true }
sentinel = { workspace = true }
packery = { workspace = true }
bakery = { workspace = true }
bootbridge = { workspace = true }
santa = { workspace = true }
