[package]
name = "radium"
version = "0.1.0"
edition = "2024"

[features]
testing = []
panic_exit = []

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies]
spin = "0.9.8"
uart_16550 = "0.2.0"
bitflags = "2.4.1"
uguid = "2.2.0"
bit_field = "0.10.2"
hashbrown = "0.14.5"
getrandom = "0.3.1"
raw-cpuid = "11.5.0"
paste = "1.0.15"
bootbridge = { path = "../bootbridge"}
santa = { path = "../santa"}
c_enum = { path = "../c_enum"}
kernel_proc = { path = "../kernel_proc" }
pager = { path = "../pager" }
sentinel = { path = "../sentinel" }
rstd = { path = "../rstd" }
packery = { path = "../packery" }

[dependencies.thiserror]
version = "2.0.12"
default-features = false

[dependencies.derivative]
version = "2.2.0"
default-features = false
features = ["use_core"]

[dependencies.bakery]
path = "../bakery"
default-features = false
features = ["alloc"]

[dependencies.unwinding]
version = "0.2.6"
default-features = false
features = ["unwinder", "fde-static", "personality", "panic", "dwarf-expr", "hide-trace"]

[dependencies.fontdue]
version = "0.9.2"
default-features = false
features = ["hashbrown"]

[dependencies.crc]
version = "1.8.1"
default-features = false

[dependencies.uuid]
version = "1.6.1"
features = ["v4"]
default-features = false

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[build-dependencies]
cc = "1.0"
nasm-rs = "0.3.0"
buildid = "=1.0.2"
